[package]
name = "fuzzball"
version = "0.1.0"
authors = ["Kesara Rathnayake <kesara@fake.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.2.0"
vst-gui = { git = "https://github.com/mikesoylu/rust-vst-gui/" }

[lib]
name = "fuzzball"
crate-type = ["cdylib"]
